Endpoint to test db_conectivity
