# Flask_Blueprint/app/routes/main.py
@@ -1,5 +1,5 @@
 from flask import Blueprint, jsonify, request
-from app.dao.generic_dao import BaseDAO
+from app.services.db import get_db_connection
 
 main_bp = Blueprint('main', __name__)
 
@@ -20,20 +20,8 @@ def ping():
     """
     return jsonify({"message": "pong"})
 
-'''@main_bp.route('/generic_crud', methods=['GET'])
-def root():
-    """
-    Get All items
-    ---
-    responses:
-      200:
-        description: Data is retrived
-        schema:
-          type: object
-          properties:
-            data:
-              type: object
-      400:
-        description: No data retrived.
-    """
-    return jsonify({"data": "ok"})'''
+@main_bp.route('/test_db', methods=["GET"])
+def test_db():
+    conn = get_db_connection()
+    print(conn)
+    return jsonify({"message": "ok"})
